--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -67,6 +67,12 @@
     <Compile Include="FrmAttendanceList.Designer.cs">
       <DependentUpon>FrmAttendanceList.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPresence.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPresence.Designer.cs">
+      <DependentUpon>FrmPresence.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmSaveStudent.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmAttendanceList.resx">
       <DependentUpon>FrmAttendanceList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPresence.resx">
+      <DependentUpon>FrmPresence.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmSaveStudent.resx">
       <DependentUpon>FrmSaveStudent.cs</DependentUpon>
