--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbConnectionString.cs" />
     <Compile Include="ListAttendance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attendance.cs" />
