--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="ReportListPresence.rdlc" />
     <None Include="packages.config" />
