--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ListAttendance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attendance.cs" />
+    <Compile Include="ReasonForAbsence.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
