--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -140,6 +140,12 @@
     <Compile Include="FrmLoading.Designer.cs">
       <DependentUpon>FrmLoading.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmReasonForAbsence.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReasonForAbsence.Designer.cs">
+      <DependentUpon>FrmReasonForAbsence.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmReportPresenceStudent.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,6 +232,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLoading.resx">
       <DependentUpon>FrmLoading.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReasonForAbsence.resx">
+      <DependentUpon>FrmReasonForAbsence.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmReportPresenceStudent.resx">
       <DependentUpon>FrmReportPresenceStudent.cs</DependentUpon>
@@ -318,6 +327,7 @@
     <None Include="Resources\menu-kebab-horizontal-circle-icon-256x256-sjlomk7v.png" />
     <None Include="Resources\Pictogrammers-Material-Checkbox-marked-outline.24.png" />
     <None Include="Resources\Pictogrammers-Material-Checkbox-blank-outline.24.png" />
+    <None Include="Resources\atestado-de-trabalho-para-justificar-falta-na-faculdade 24px.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
