--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -122,12 +122,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmCourseManagementt.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -230,9 +224,6 @@
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="ViewStudentReport.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FrmCourseManagementt.resx">
       <DependentUpon>FrmCourseManagementt.cs</DependentUpon>
     </EmbeddedResource>
@@ -337,6 +328,7 @@
     <None Include="Resources\Pictogrammers-Material-Checkbox-marked-outline.24.png" />
     <None Include="Resources\Pictogrammers-Material-Checkbox-blank-outline.24.png" />
     <None Include="Resources\atestado-de-trabalho-para-justificar-falta-na-faculdade 24px.png" />
+    <None Include="Resources\white.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
