Relatório dos motivos de faltas por alunos

--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -122,6 +122,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dtReport.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dtReport.xsd</DependentUpon>
+    </Compile>
     <Compile Include="FrmCourseManagementt.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +138,12 @@
     </Compile>
     <Compile Include="FrmBackupAndRestore.Designer.cs">
       <DependentUpon>FrmBackupAndRestore.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmFaultDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmFaultDetails.Designer.cs">
+      <DependentUpon>FrmFaultDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmLoading.cs">
       <SubType>Form</SubType>
@@ -223,12 +234,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="utils\PrintReportDirecty.cs" />
     <Compile Include="ViewStudentReport.cs" />
     <EmbeddedResource Include="FrmCourseManagementt.resx">
       <DependentUpon>FrmCourseManagementt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmBackupAndRestore.resx">
       <DependentUpon>FrmBackupAndRestore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmFaultDetails.resx">
+      <DependentUpon>FrmFaultDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLoading.resx">
       <DependentUpon>FrmLoading.cs</DependentUpon>
@@ -285,6 +300,18 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="ReportListPresence.rdlc" />
+    <EmbeddedResource Include="reportPresenceAndAbsence.rdlc" />
+    <None Include="dtReport.xsc">
+      <DependentUpon>dtReport.xsd</DependentUpon>
+    </None>
+    <None Include="dtReport.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dtReport.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="dtReport.xss">
+      <DependentUpon>dtReport.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\ViewStudentReport1.datasource" />
     <None Include="Properties\Settings.settings">
