--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -234,6 +234,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="utils\ChangeSomeValuesInTheDataTable.cs" />
+    <Compile Include="utils\CPF.cs" />
+    <Compile Include="utils\Security.cs" />
     <Compile Include="utils\Percentage.cs" />
     <Compile Include="utils\LocalSubReport.cs" />
     <Compile Include="utils\PrintReportDirecty.cs" />
