print Lista de alunos

--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -293,6 +293,7 @@
     <EmbeddedResource Include="FrmStudent.resx">
       <DependentUpon>FrmStudent.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Lista de Alunos.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
